--- a/web/index.tmpl.html
+++ b/web/index.tmpl.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <script defer src="main.dart" type="application/dart"></script>
-    <script defer src="packages/browser/dart.js"></script>
+    <script defer src="main.dart.js"></script>
 </head>
 
 <body>
 
   <div id="output"></div>
-
+  <div id="version">Current version: %version%!</div>
 </body>
 </html>
