pimp some styles, added some comments to the output

--- a/web/index.tmpl.html
+++ b/web/index.tmpl.html
@@ -21,6 +21,6 @@
 <body>
 
   <div id="output"></div>
-  <div id="version">Current version: %version%!</div>
+  <div id="version">Current version: %version%! (from index.html)</div>
 </body>
 </html>
